--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "pikchr-js": "^0.1.1",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "^1.9.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
